--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,16 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1919598055512436"
+       crossorigin="anonymous"></script>
+  <!-- contents/square -->
+  <ins class="adsbygoogle"
+       style="display:inline-block;width:250px;height:250px"
+       data-ad-client="ca-pub-1919598055512436"
+       data-ad-slot="4013588970"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
